--- a/.overcommit.yml
+++ b/.overcommit.yml
@@ -129,7 +129,7 @@ PreCommit:
   Scalastyle:
     enabled:                  false
 
-  RuboCop:
+  Rubocop:
     enabled:                  true
 
   ScssLint:
