Chore: Update to most recent version of .overcommit.yml

--- a/.overcommit.yml
+++ b/.overcommit.yml
@@ -129,7 +129,7 @@ PreCommit:
   Scalastyle:
     enabled:                  false
 
-  Rubocop:
+  RuboCop:
     enabled:                  true
 
   ScssLint:
